# refactory

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/refactory_string/: Cargo.toml  LICENSE  README.md
src/refactory_string/src/: chunk.rs  chunk_list.rs  chunk_test.rs  lib.rs  refactory_buffer.rs  refactory_buffer_test.rs  refactory_string.rs  refactory_string_own_test.rs  refactory_string_test.rs
src/virtualfs/: Cargo.toml
src/virtualfs/src/: error.rs  fs.rs  lib.rs  path.rs  traits.rs
src/virtualfs/src/fs/: memory.rs
